# ecolefootMBNK-ecolefoot_backend

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml
api/: admin.py  admin_urls.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/static/css/: custom_admin.css
api/templates/admin/: base_site.html
ecolefoot_backend/: asgi.py  settings.py  urls.py  wsgi.py
